mention Lush (http://lush.sourceforge.net)

--- a/resources.html
+++ b/resources.html
@@ -287,6 +287,12 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    It is based on DOE-MACSYMA and licensed under the GPL.
    Its abilities include symbolic integration, 3D plotting, and an ODE
    solver.</dd>
+ <dt><strong>Lush - a Lisp alternative to Matlab, Python, and Scheme.</strong>
+  [<a href="http://sourceforge.net/projects/lush">project</a>
+   <a href="http://lush.sourceforge.net">home</a>]</dt>
+  <dd>Lush is an object-oriented Lisp interpreter/compiler with a
+   seamless interface to C, a huge numerical library, a GUI toolkit,
+   and bindings to GSL, SDL, OpenGL, V4l, and others.</dd>
 </dl>
 
 <hr/>
