added Unicode ID

--- a/propaganda.html
+++ b/propaganda.html
@@ -71,7 +71,7 @@
   </ul></dd>
 </dl>
 
-<h2>CLISP and Unicode</h2>
+<h2 id="unicode">CLISP and Unicode</h2>
 
 <p><img src="http://www.unicode.org/webscripts/logo60s2.gif"
         style="float:left" width="34" height="33" alt="[unicode logo]"/>
