--- a/resources.html
+++ b/resources.html
@@ -194,7 +194,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   of <a href="http://www.cvshome.org">CVS</a>
   [<a href="http://users.footprints.net/~kaz/">Kaz Kylheku</a>]</dt>
  <dd><a href="http://users.footprints.net/~kaz/mcvs.html"
-             >http://users.footprints.net/~kaz/mcvs.html</a></dd>
+             >http://users.footprints.net/~kaz/mcvs.html</a><br/>
+  <a href="http://freshmeat.net/projects/mcvs"
+     >http://freshmeat.net/projects/mcvs</a></dd>
  <dt><strong>HTTP.LSP</strong> - An object-oriented HTTP server written in
   CLISP [<a href="http://www.flownet.com/gat/">Erann Gat</a>]</dt>
  <dd><a href="http://alvin.jpl.nasa.gov/gat/ftp/http.lsp"
