mention http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html

--- a/resources.html
+++ b/resources.html
@@ -35,6 +35,11 @@
  <dt><strong>CLtL2 in HTML</strong> [Mark Kantrowitz]</dt>
   <dd><a href="http://www.cs.cmu.edu/afs/cs/project/ai-repository/ai/lang/lisp/doc/cltl/cltl_ht.tgz">ftp://ftp.cs.cmu.edu/user/ai/lang/lisp/doc/cltl/cltl_ht.tgz</a>
   <a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html">http://www.cs.cmu.edu/afs/cs.cmu.edu/project/ai-repository/ai/html/cltl/cltl2.html</a></dd>
+ <dt><strong>CLISP FFI HOWTO</strong> [Nikodemus Siivola]</dt>
+  <dd><a href="http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html"
+         >http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html</a><br/>
+   a short non-authoritative guide to extending CLISP on Debian via
+   its FFI and module facilities</dd>
 </dl>
 
 <h1>About Lisp in general</h1>
