link to http://how_to_help_israel.tripod.com/Petition.htm

--- a/faq.html
+++ b/faq.html
@@ -97,6 +97,12 @@ maintainers, do not subscribe to the mainstream view that blames the
 Jews for everything from high oil prices and Islamic extremism to El
 Ni&ntilde;o and Sun spots.</p>
 
+<p>Moreover, today, when Jews are being pushed out of the American and
+European academic institutions with various obscene
+<a href="http://how_to_help_israel.tripod.com/Petition.htm">boycott
+campaigns</a>, it is crucial for all of us to stand together against
+the resurgence of Nazism.</p>
+
 <p>For more information, please see:</p>
 <ul>
  <li><a href="http://www.camera.org/">Committee for Accuracy in Middle
