mention http://clisp.alma.com/

--- a/resources.html
+++ b/resources.html
@@ -206,6 +206,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   CLISP [<a href="http://www.flownet.com/gat/">Erann Gat</a>]</dt>
  <dd><a href="http://alvin.jpl.nasa.gov/gat/ftp/http.lsp"
              >http://alvin.jpl.nasa.gov/gat/ftp/http.lsp</a></dd>
+ <dt><strong>Oracle</strong> and <strong>FastCGI</strong> modules
+  [<a href="http://www.alma.com/staff/hin">John K. Hinsdale</a>]</dt>
+ <dd><a href="http://clisp.alma.com/">http://clisp.alma.com/z</a></dd>
 </dl>
 
 <p>See also the
