link to commies.html

--- a/wanted.html
+++ b/wanted.html
@@ -18,8 +18,8 @@
  <a href="http://www.haible.de/bruno/">Bruno Haible</a> was one of the
  finalists for the <a href="http://www.gnu.org/award/2002/2002.html">2002
   Free Software Award</a>! Note that it said:</p>
-<p class="center"><strong><cite>"Bruno Haible (known for his work on
- GNU CLISP)"</cite></strong>!</p>
+<p class="center"><big><strong><cite>"Bruno Haible (known for his work
+ on GNU CLISP)"</cite></strong>!</big></p>
 
 <h2>Now it is your chance to get the next Free Software Award!</h2>
 
@@ -36,9 +36,10 @@
 </ul>
 
 <p>This reminds me of a joke: after the 1991 Russian coup attempt (which
-lead to the final downfall of communism), the communist party was very
-unpopular and tried to increase the membership by asking its members to
-recruit new members, with the following incentives:</p>
+lead to the final downfall of communism), the
+<a href="http://www.podval.org/~sds/commies.html">Communist Party</a>
+was very unpopular and tried to increase the membership by asking its
+members to recruit new members, with the following incentives:</p>
 <ul><li>if you bring one new member, you don't have to pay membership dues</li>
 <li>if you bring two new members, you may resign from the Party</li>
 <li>if you bring three new members, you may resign and you will also
