link to wxlisp.org

--- a/resources.html
+++ b/resources.html
@@ -298,11 +298,17 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    Its abilities include symbolic integration, 3D plotting, and an ODE
    solver.</dd>
  <dt><strong>Lush - a Lisp alternative to Matlab, Python, and Scheme.</strong>
-  [<a href="http://sourceforge.net/projects/lush">project</a>
+  [<a href="http://sourceforge.net/projects/lush/">project</a>
    <a href="http://lush.sourceforge.net">home</a>]</dt>
   <dd>Lush is an object-oriented Lisp interpreter/compiler with a
    seamless interface to C, a huge numerical library, a GUI toolkit,
    and bindings to GSL, SDL, OpenGL, V4l, and others.</dd>
+ <dt><strong>wxLisp = wxWindows + Common Lisp</strong>
+  [<a href="http://sourceforge.net/projects/wxlisp/">project</a>
+   <a href="http://www.wxlisp.org/">home</a>]</dt>
+ <dd>wxLisp is an attempt to create Lisp bindings to the
+  <a href="http://www.wxwindows.org/">wxWindows</a> API.
+  It is still in its infancy and requires C, C++ and Lisp hackers.</dd>
 </dl>
 
 <hr/>
