--- a/wanted.html
+++ b/wanted.html
@@ -93,7 +93,7 @@ Segmentation fault</pre></li>
  <li>compilation to JVM</li>
  <li>making FFI compatible with
   <a href="http://uffi.med-info.com/">UFFI</a></li>
- <li>adding GUI</li>
+ <li>adding GUI, e.g., via <a href="http://www.wxlisp.org/">wxLisp</a></li>
  <li>adding SSL bindings</li>
 </ol>
 
