http://www.paulgraham.com/diff.html

--- a/resources.html
+++ b/resources.html
@@ -80,7 +80,8 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
  a collection of links to and resources for free software implemented in
  Common Lisp and available on Unix-like systems.</p>
 
-<p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a>
+<p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a> and
+ <a href="http://www.paulgraham.com/diff.html">What Made Lisp Different</a>
  [<a href="http://www.paulgraham.com/">Paul Graham</a>]</p>
 
 <p><a href="http://common-lisp.info/">The Common Lisp Programming Language</a>
