--- a/faq.html
+++ b/faq.html
@@ -54,9 +54,9 @@ more questions (and answers!)</p>
 
 <ol>
  <li><a href="#gpl">License - why GNU GPL?</a></li>
+ <li><a href="#ansi">What about ANSI compliance?</a></li>
  <li><a href="#menorah">Why is CLISP using menorah as the logo?</a></li>
  <li><a href="#help">How do I ask for help?</a></li>
- <li><a href="#ansi">What about ANSI compliance?</a></li>
  <li><a href="#mailing-lists">Which mailing lists should I subscribe
    to?</a></li>
  <li><a href="#bugs">How do I report bugs?</a></li>
@@ -66,7 +66,39 @@ more questions (and answers!)</p>
 <h3 id="gpl">License - why <a href="http://www.gnu.org">GNU</a>
   <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>?</h3>
 
-<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/clisp/clisp/doc/Why-CLISP-is-under-GPL?rev=HEAD&amp;content-type=text/vnd.viewcvs-markup">Because CLISP uses GNU readline</a>.</p>
+<p><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/Why-CLISP-is-under-GPL">Because CLISP uses GNU readline</a>.</p>
+
+<p>Note that this does not necessarily prevent you from distributing
+ your proprietary products based on CLISP.  See <em>Note</em> in
+<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/COPYRIGHT">COPYRIGHT</a>.</p>
+
+<p><a href="#meta">back to Meta</a></p><hr/>
+
+<h3 id="ansi">What about ANSI compliance?</h3>
+
+<p><a href="http://clisp.cons.org">CLISP</a>
+<a href="http://www.lisp.org/HyperSpec/Body/glo_p.html#purports_to_conform"
+ ><em>purports to conform</em></a> to the ANSI Common Lisp specification,
+so all deviations in <code>clisp
+ <a href="clisp.html#opt-ansi">-ansi</a></code> from the ANSI standard
+are bugs and are not (yet) fixed only due to lack of resources.</p>
+
+<p>On the other hand, some decisions made by the ANSI X3J13 committee
+were not as justified from the <em>technical</em> point of view as were
+most of them, and some of those questionable decisions were made
+<em>after</em> the alternative behavior have already been implemented in
+CLISP.  The CLISP developers took pains to modify CLISP to
+unconditionally comply with the ANSI spec in all cases
+<a href="impnotes.html#ansi">except those 6 situations where they
+ believed that the committee made a mistake</a>,
+in which cases the committee behavior is <em>still</em> optionally
+available.</p>
+
+<p>CLISP does not start in the <code>ANSI</code> mode by default for
+historical reasons and this is not about to change.
+<a href="impnotes.html#image">Dumping an image</a> or
+<a href="clisp.html#opt-ansi">passing a command line argument</a>
+are easy enough.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
@@ -76,7 +108,7 @@ more questions (and answers!)</p>
 correct or not, you may simply think that
 <a href="http://www.lisp.org">Common Lisp</a> brings
 the <strong>Light</strong> to a programmer, and
-<a href="http://clisp.cons.org">CLISP</a>  is a vehicle that carries
+<a href="http://clisp.cons.org">CLISP</a> is a vehicle that carries
 the <strong>Light</strong>.</p>
 
 <h4>History</h4>
@@ -163,34 +195,6 @@ moved it here.</p>
    since the mailing lists are publicly archived
    (you are encouraged to search them before asking).</dd>
 </dl>
-
-<p><a href="#meta">back to Meta</a></p><hr/>
-
-<h3 id="ansi">What about ANSI compliance?</h3>
-
-<p><a href="http://clisp.cons.org">CLISP</a>
-<a href="http://www.lisp.org/HyperSpec/Body/glo_p.html#purports_to_conform"
- ><em>purports to conform</em></a> to the ANSI Common Lisp specification,
-so all deviations in <code>clisp
- <a href="clisp.html#opt-ansi">-ansi</a></code> from the ANSI standard
-are bugs and are not (yet) fixed only due to lack of resources.</p>
-
-<p>On the other hand, some decisions made by the ANSI X3J13 committee
-were not as justified from the <em>technical</em> point of view as were
-most of them, and some of those questionable decisions were made
-<em>after</em> the alternative behavior have already been implemented in
-CLISP.  The CLISP developers took pains to modify CLISP to
-unconditionally comply with the ANSI spec in all cases
-<a href="impnotes.html#ansi">except those 6 situations where they
- believed that the committee made a mistake</a>,
-in which cases the committee behavior is <em>still</em> optionally
-available.</p>
-
-<p>CLISP does not start in the <code>ANSI</code> mode by default for
-historical reasons and this is not about to change.
-<a href="impnotes.html#image">Dumping an image</a> or
-<a href="clisp.html#opt-ansi">passing a command line argument</a>
-are easy enough.</p>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
 
