refer to bug 710737 for completion

--- a/wanted.html
+++ b/wanted.html
@@ -81,7 +81,8 @@ Segmentation fault</pre><p><br/></p></li>
      >gcc3</a> ==&gt; broken TAB:
   segfault or SP/program stack overflow (depending on the presence of
   <a href="http://sourceforge.net/projects/libsigsegv/">libsigsegv</a>)
-  instead of a completion.<p><br/></p></li>
+  instead of a completion.
+  See bug <a href="https://sourceforge.net/tracker/?func=detail&atid=101355&aid=710737&group_id=1355">710737</a>.<p><br/></p></li>
  <li id="unrealloc">GC should make reallocated objects (strings and
   instances, see <code>reallocate_small_string</code>
   in <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/spvw_typealloc.d"><code>src/spvw_typealloc.d</code></a>
