Where is the init file on my platform?

--- a/faq.html
+++ b/faq.html
@@ -233,6 +233,7 @@ moved it here.</p>
  <li><a href="#ide">where is the IDE?</a></li>
  <li><a href="#opt">what are the command line arguments?</a></li>
  <li><a href="#ext">What CLISP extensions are available?</a></li>
+ <li><a href="#rc">Where is the init file on my platform?</a></li>
 </ol>
 <hr/>
 
@@ -280,6 +281,14 @@ moved it here.</p>
   <p>Both <a href="http://allegroserve.sourceforge.net/">AllegroServe</a>
   and <a href="http://www.ai.mit.edu/projects/iiip/doc/cl-http/">CL-HTTP</a>
   require multithreading and do not work with CLISP.</p></dd></dl>
+
+<p><a href="#run">back to Running</a></p><hr/>
+
+<h3 id="rc">Where is the init file on my platform?</h3>
+
+<p>Read the file <code>clisp.html#opt-norc</code> in your distribution
+ (this is the version of the <a href="clisp.html">user manual</a> for
+ your platform).</p>
 
 <p><a href="#run">back to Running</a></p><hr/>
 
