--- a/resources.html
+++ b/resources.html
@@ -210,6 +210,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>Oracle</strong> and <strong>FastCGI</strong> modules
   [<a href="http://www.alma.com/staff/hin">John K. Hinsdale</a>]</dt>
  <dd><a href="http://clisp.alma.com/">http://clisp.alma.com/z</a></dd>
+ <dt><strong>Screamer</strong> - an extension of Common Lisp that adds
+  support for nondeterministic programming
+  [<a href="http://www.ece.purdue.edu/~qobi">Jeffrey Mark Siskind</a>]</dt>
+ <dd><a href="http://clocc.sf.net/clocc/src/screamer/"
+        >CLOCC/src/screamer</a></dd>
 </dl>
 
 <p>See also the
