--- a/wanted.html
+++ b/wanted.html
@@ -82,7 +82,8 @@ Segmentation fault</pre><p><br/></p></li>
   segfault or SP/program stack overflow (depending on the presence of
   <a href="http://sourceforge.net/projects/libsigsegv/">libsigsegv</a>)
   instead of a completion.
-  See bug <a href="https://sourceforge.net/tracker/?func=detail&atid=101355&aid=710737&group_id=1355">710737</a>.<p><br/></p></li>
+  See CLISP bug <a href="https://sourceforge.net/tracker/?func=detail&atid=101355&aid=710737&group_id=1355">710737</a>
+  and Debian bug <a href="http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=183796">183796</a>.<p><br/></p></li>
  <li id="unrealloc">GC should make reallocated objects (strings and
   instances, see <code>reallocate_small_string</code>
   in <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/spvw_typealloc.d"><code>src/spvw_typealloc.d</code></a>
@@ -90,7 +91,7 @@ Segmentation fault</pre><p><br/></p></li>
   in <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/record.d"><code>src/record.d</code></a>) into regular objects.
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/spvw_garcol.d?rev=1.47"><code>src/spvw_garcol.d:1.47</code></a>
   did that, but this lead to a crash in
-  the test suite case that now just fails<p><br/></p></li>
+  the test suite case that now just fails.<p><br/></p></li>
 </ol>
 
 <h3 id="new">New features</h3>
