--- a/wanted.html
+++ b/wanted.html
@@ -82,8 +82,11 @@ Segmentation fault</pre><p><br/></p></li>
   segfault or SP/program stack overflow (depending on the presence of
   <a href="http://sourceforge.net/projects/libsigsegv/">libsigsegv</a>)
   instead of a completion.
-  See CLISP bug <a href="https://sourceforge.net/tracker/?func=detail&atid=101355&aid=710737&group_id=1355">710737</a>
-  and Debian bug <a href="http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=183796">183796</a>.<p><br/></p></li>
+  See CLISP bugs <a href="https://sourceforge.net/tracker/?func=detail&atid=101355&aid=710737&group_id=1355">710737</a>
+  and <a href="https://sourceforge.net/tracker/index.php?func=detail&aid=723097&group_id=1355&atid=101355">723097</a>,
+  and Debian bug <a href="http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=183796">183796</a>.
+  The workaround is committed to the CVS, so all that remains is
+  submitting a GCC bug report.<p><br/></p></li>
  <li id="unrealloc">GC should make reallocated objects (strings and
   instances, see <code>reallocate_small_string</code>
   in <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/spvw_typealloc.d"><code>src/spvw_typealloc.d</code></a>
