(clisp-devel): mention mail delivery disabling

--- a/faq.html
+++ b/faq.html
@@ -184,7 +184,10 @@ moved it here.</p>
   <a href="http://lists.sourceforge.net/lists/listinfo/clisp-devel"
      >&lt;clisp-devel&gt;</a></strong></dt>
   <dd>This is the right place to discuss CLISP internals, submit
-   patches, offer help.  You must be subscribed to post.</dd>
+   patches, offer help.  You must be subscribed to post.
+   If you read this list on <a href="http://gmane.org">Gmane</a> and do
+   not want to receive it also by e-mail, you can subscribe to it using
+   the aforementioned web interface and then disable mail delivery.</dd>
  <dt><strong><a href="http://sourceforge.net/project/memberlist.php?group_id=1355">Individual CLISP developers</a></strong></dt>
   <dd>This is <strong>never</strong> the right thing to do, unless you
    want to <strong>hire</strong> this developer to do CLISP consulting
