--- a/resources.html
+++ b/resources.html
@@ -215,6 +215,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href="http://www.ece.purdue.edu/~qobi">Jeffrey Mark Siskind</a>]</dt>
  <dd><a href="http://clocc.sf.net/clocc/src/screamer/"
         >CLOCC/src/screamer</a></dd>
+ <dt><strong>Sneps</strong> - The Semantic Network Processing System</dt>
+ <dd><a href="http://www.cse.buffalo.edu/sneps/"
+        >http://www.cse.buffalo.edu/sneps/</a>
+  <a href="ftp://ftp.cse.buffalo.edu/pub/sneps/"
+     >ftp://ftp.cse.buffalo.edu/pub/sneps/</a></dd>
 </dl>
 
 <p>See also the
