more dpANS links, fixed kmp homepage

--- a/resources.html
+++ b/resources.html
@@ -26,10 +26,15 @@
 <h1 id="doc">Common Lisp Documentation</h1>
 
 <dl>
- <dt><strong>ANSI CL spec in HTML</strong> [Kent Pitman at Harlequin Ltd.]</dt>
-  <dd><a href="http://www.lisp.org/HyperSpec/FrontMatter/"
+ <dt><strong>ANSI CL spec</strong>
+  [<a href="http://nhplace.com/kent/">Kent Pitman</a>, X3J13 editor]</dt>
+ <dd>HTML: <a href="http://www.lisp.org/HyperSpec/FrontMatter/"
               >http://www.lisp.org/HyperSpec/FrontMatter/</a><br/>
-      <a href="http://www.xanalys.com/software_tools/reference/HyperSpec/Front/index.htm">http://www.xanalys.com/software_tools/reference/HyperSpec/Front/index.htm</a></dd>
+  TeX/DVI: <a href="ftp://parcftp.xerox.com/pub/cl/"
+              >ftp://parcftp.xerox.com/pub/cl/</a><br/>
+  <a href="http://www-2.cs.cmu.edu/afs/cs/project/ai-repository/ai/lang/lisp/doc/standard/ansi/">http://www-2.cs.cmu.edu/afs/cs/project/ai-repository/ai/lang/lisp/doc/standard/ansi/</a>
+  PostScript: <a href="http://quimby.gnus.org/circus/cl/"
+                 >http://quimby.gnus.org/circus/cl/</a></dd>
  <dt><strong>MOP (Meta-Object Protocol)</strong></dt>
   <dd><a href="http://www.lisp.org/mop/">http://www.lisp.org/mop/</a></dd>
  <dt><strong>CLtL2 in HTML</strong> [Mark Kantrowitz]</dt>
@@ -85,14 +90,14 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
  [<a href="http://www.paulgraham.com/">Paul Graham</a>]</p>
 
 <p><a href="http://common-lisp.info/">The Common Lisp Programming Language</a>
- [<a href="http://world.std.com/~pitman/pitman.html">Kent M. Pitman</a>]</p>
+ [<a href="http://nhplace.com/kent/">Kent Pitman</a>]</p>
 
 <p><a
 href="http://slashdot.org/article.pl?sid=01/11/03/1726251&amp;mode=nocomment"
-      >Kent M. Pitman Answers On Lisp And Much More</a>,
+      >Kent Pitman Answers On Lisp And Much More</a>,
    <a
 href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
-      >Kent M. Pitman's Second Wind</a>
+      >Kent Pitman's Second Wind</a>
  [<a href="http://slashdot.org/">Slashdot</a>]</p>
 
 <p><a href="http://biolisp.org">BioLisp.org</a> -
@@ -217,7 +222,7 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
         >CLOCC/src/screamer</a></dd>
  <dt><strong>Sneps</strong> - The Semantic Network Processing System</dt>
  <dd><a href="http://www.cse.buffalo.edu/sneps/"
-        >http://www.cse.buffalo.edu/sneps/</a>
+        >http://www.cse.buffalo.edu/sneps/</a><br/>
   <a href="ftp://ftp.cse.buffalo.edu/pub/sneps/"
      >ftp://ftp.cse.buffalo.edu/pub/sneps/</a></dd>
 </dl>
