Aren't you afraid of losing some users who are offended by the logo? http://groups.google.com/groups?selm=989898671967295%40amnet.net.ae

--- a/faq.html
+++ b/faq.html
@@ -160,6 +160,13 @@ A note to that effect was kept in the file
 until 2002, when we decided that is was not visible enough there and
 moved it here.</p>
 
+<h4>Aren't you afraid of losing some users who are offended by the logo?</h4>
+
+<p>Do you have in mind people like
+ <a href="http://groups.google.com/groups?selm=989898671967295%40amnet.net.ae"
+    >this</a> one?
+ Good riddance!</p>
+
 <p><a href="#meta">back to Meta</a></p><hr/>
 
 <h3 id="help">How do I ask for help?</h3>
