--- a/resources.html
+++ b/resources.html
@@ -59,6 +59,11 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 <p><a href="http://www.apl.jhu.edu/~hall/lisp.html">An Introduction and
   Tutorial for Common Lisp</a> [<a href="hall@apl.jhu.edu">Marty Hall</a>]</p>
 
+<p><a href="http://www.n-a-n-o.com/lisp/cmucl-tutorials/LISP-tutorial.html"
+      >Common LISP Hints</a> - also comes with the CLISP distribution
+ as <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/LISP-tutorial.txt?rev=HEAD"><code>doc/LISP-tutorial.txt</code></a>
+ in plain text format.</p>
+
 <p><a href="http://www.pascalcostanza.de/lisp/guide.html">Highly
   Opinionated Guide to Lisp</a>
  [<a href="mailto:costanza@web.de">Pascal Costanza</a>]</p>
