Please do not CC your messages to the individual developers

--- a/faq.html
+++ b/faq.html
@@ -203,7 +203,9 @@ moved it here.</p>
    busy, they might get weeks to answer your question;
    as well as for the benefit of the other CLISP users,
    since the mailing lists are publicly archived
-   (you are encouraged to search them before asking).</dd>
+   (you are encouraged to search them before asking).
+   Please do <strong>not</strong> <tt>CC</tt> your messages to the
+   individual developers.</dd>
 </dl>
 
 <p><a href="#meta">back to Meta</a></p><hr/>
