GClisp = clisp + gtk

--- a/resources.html
+++ b/resources.html
@@ -97,6 +97,8 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 <p><a href="http://common-lisp.info/">The Common Lisp Programming Language</a>
  [<a href="http://nhplace.com/kent/">Kent Pitman</a>]</p>
 
+<p><a href="http://common-lisp.net">common-lisp.net</a></p>
+
 <p><a
 href="http://slashdot.org/article.pl?sid=01/11/03/1726251&amp;mode=nocomment"
       >Kent Pitman Answers On Lisp And Much More</a>,
@@ -330,6 +332,11 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
  <dd>wxLisp is an attempt to create Lisp bindings to the
   <a href="http://www.wxwindows.org/">wxWindows</a> API.
   It is still in its infancy and requires C, C++ and Lisp hackers.</dd>
+ <dt><strong>GClisp = CLISP + GTK+</strong>
+  [<a href="http://sourceforge.net/projects/wxlisp/">project</a>
+   <a href="http://gclisp.sourceforge.net/">home</a>]</dt>
+ <dd>GClisp is a gtk+-2.0 front-end to Common Lisp (clisp).
+  It provides an IDE with both a text editor and a running lisp repl.</dd>
 </dl>
 
 <hr/>
