--- a/resources.html
+++ b/resources.html
@@ -333,7 +333,7 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
   <a href="http://www.wxwindows.org/">wxWindows</a> API.
   It is still in its infancy and requires C, C++ and Lisp hackers.</dd>
  <dt><strong>GClisp = CLISP + GTK+</strong>
-  [<a href="http://sourceforge.net/projects/wxlisp/">project</a>
+  [<a href="http://sourceforge.net/projects/gclisp/">project</a>
    <a href="http://gclisp.sourceforge.net/">home</a>]</dt>
  <dd>GClisp is a gtk+-2.0 front-end to Common Lisp (clisp).
   It provides an IDE with both a text editor and a running lisp repl.</dd>
