suggest http://gclisp.sourceforge.net/ as the IDE

--- a/faq.html
+++ b/faq.html
@@ -257,6 +257,8 @@ moved it here.</p>
  Some people prefer <a href="http://ilisp.cons.org/">ILISP</a> to the
  standard Emacs facilities.</p>
 
+<p>See also <a href="http://gclisp.sourceforge.net/">GClisp</a>.</p>
+
 <p>See also <a href="http://cl-cookbook.sourceforge.net/windows.html">The
   Common Lisp Cookbook</a></p>
 
